Closed Bug 762115 Opened 12 years ago Closed 12 years ago

Missing null check at nsHttpChannel::GetProfileDirectory

Categories

(Core :: Networking: HTTP, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla16
Tracking Status
firefox15 --- affected

People

(Reporter: mayhemer, Unassigned)

References

Details

Crash Data

Attachments

(1 file)

Attached patch v1Splinter Review
      No description provided.
Attachment #630609 - Flags: review?(michal.novotny)
Crash Signature: [@ mozilla::net::nsHttpChannel::GetProfileDirectory(nsILocalFile**)] → [@ mozilla::net::nsHttpChannel::GetProfileDirectory(nsILocalFile**)] [@ mozilla::net::nsHttpChannel::GetProfileDirectory(nsIFile**)]
Attachment #630609 - Flags: review?(michal.novotny) → review+
https://hg.mozilla.org/mozilla-central/rev/bafcd7304796

(Merged by Ed Morley)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in before you can comment on or make changes to this bug.