Bug 762115 - Missing null check at nsHttpChannel::GetProfileDirectory, r=michal