netwerk/protocol/http/nsHttpChannel.cpp
@@ -5381,6 +5381,9 @@ nsHttpChannel::GetProfileDirectory(nsIFile **_result)
 {
     NS_ENSURE_ARG(_result);
 
+    if (!mProfileDirectory)
+        return NS_ERROR_NOT_AVAILABLE;
+
     NS_ADDREF(*_result = mProfileDirectory);
     return NS_OK;
 }
